--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,31 +11,24 @@
     <param-value>classpath:spring/spring-mybatis.xml</param-value>
   </context-param>
 
-  <!--本地测试log配置-->
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>classpath:log_config/log4j.properties</param-value>
-  </context-param>
-
-  <!--项目上线后的log-->
-  <!-- log4j配置，文件路径，因为是跟随项目启动 -->
-  <!--<context-param>-->
-  <!--<param-name>log4jConfigLocation</param-name>-->
-  <!--<param-value>classpath:log_config/log4j.xml</param-value>-->
-  <!--</context-param>-->
-  <!--&lt;!&ndash; 配置log4j.xml变量，如果需要动态的就使用下面方式，使用方法${name} &ndash;&gt;-->
-  <!--<context-param>-->
-  <!--<param-name>controller</param-name>-->
-  <!--<param-value>controller-log</param-value>-->
-  <!--</context-param>-->
-
-  <!--<context-param>-->
-  <!--<param-name>loggingLevel</param-name>-->
-  <!--<param-value>all</param-value>-->
-  <!--</context-param>-->
-  <!-- 加载log4j配置文件 -->
-
-  <!--新的 log4j 配置结束-->
+    <!--针对spring5的新日志写法-->
+    <!-- log4j2-start -->
+    <listener>
+        <listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
+    </listener>
+    <filter>
+        <filter-name>log4jServletFilter</filter-name>
+        <filter-class>org.apache.logging.log4j.web.Log4jServletFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>log4jServletFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+        <dispatcher>ERROR</dispatcher>
+    </filter-mapping>
+    <!-- log4j2-end -->
 
   <context-param>
     <param-name>webAppRootKey</param-name>
