--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,11 @@
       <artifactId>freemarker</artifactId>
       <version>2.3.28</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.1.2.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
